WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266387
[IFC] ASSERTION FAILED inlineItem.layoutBox().isInlineLevelBox() in InlineFormattingUtils::inlineItemWidth
https://bugs.webkit.org/show_bug.cgi?id=266387
Summary
[IFC] ASSERTION FAILED inlineItem.layoutBox().isInlineLevelBox() in InlineFor...
alan
Reported
2023-12-13 18:47:42 PST
ssia
Attachments
[fast-cq]Patch
(3.25 KB, patch)
2023-12-13 19:02 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-13 19:02:04 PST
Created
attachment 469033
[details]
[fast-cq]Patch
EWS
Comment 2
2023-12-14 04:35:21 PST
Committed
272031@main
(2dbd2d584b69): <
https://commits.webkit.org/272031@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469033
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-12-14 04:36:20 PST
<
rdar://problem/119660868
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug