[IFC] ASSERTION FAILED inlineItem.layoutBox().isInlineLevelBox() in InlineFormattingUtils::inlineItemWidth https://bugs.webkit.org/show_bug.cgi?id=266387

Reviewed by Antti Koivisto.

Do not try to measure out-of-flow content while rebuilding the line due to "revert to last breaking position" type of content.

* LayoutTests/fast/inline/inline-content-with-out-of-flow-assert-expected.txt: Added.
* LayoutTests/fast/inline/inline-content-with-out-of-flow-assert.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::rebuildLineWithInlineContent):

Canonical link: https://commits.webkit.org/272031@main